# quilt

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .markdownlintignore  .pylintrc  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  OVERVIEW.md  PR0_GRAPHQL_MOCK_SPEC.md  PR1_GRAPHQL_REFACTOR_SPEC.md  PR2_SEARCH_PACKAGES_SPEC.md  PR3_LIVE_SEARCH_TESTING_SPEC.md  PR_OPEN_ISSUES.md  README.md  SUMMARY.md  api-r.md  app.py  appveyor.yml  backport.sh  basics.md  book.json  buildyml.md  circle.yml  cli.md  code_samples.md  codecov.yml  config-entrypoint.py  config.py  conftest.py  docker-compose.yml  docs_pr_body.md  edit-a-package.md  files-manager-cruft.diff  installation.md  jsonl_load_perf_test.py  make-a-package.md  (+34 more)
api/python/: .gitattributes  .isort.cfg  .pylintrc  CI-PARITY.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  README.rst  TESTS_README  catalog.env  docker-compose.ci.yml  ec2_perf_test.py  manifest.ipynb  original_reinstall.sh  pyproject.toml  pytest.ini  quilt_new_api_notebook.ipynb  reinstall_quilt.sh  ruff.toml  setup.py  setup.txt  test.py  tst.py  tst_lspe.py  tst_pkgsetobj.py
api/python/docker/: ci-python.Dockerfile  gendocs.Dockerfile
api/python/metadata_service/: README.md  athena.py  manifest_entry_view_ddl.sql  manifest_table_ddl.sql  metadata_service.py  metadata_service_client.py  pyathena_test.py
api/python/metadata_service_development/: pyathena.py  test.py
api/python/metadata_service_devlopment/: README.md  pyathena.py
api/python/quilt/: __init__.py  admin.py  api.py  bucket.py  data_transfer.py  imports.py  packages.py  session.py  util.py
api/python/quilt3/: Cargo.toml  IMPLEMENTATION_NOTES.md  REFACTOR_NOTES.md  VERSION  __init__.py  _packages.py  _search.py  admin.py  api.py  api_keys.py  athena.py  auth.rs  bucket.py  checksums.py  cli-model.rs  client.rs  crc64.py  custom_jsonlines.py  data_checker.py  data_transfer.py  dotquilt_layout.py  exceptions.py  formats.py  hooks.py  imports.py  jsonl.py  large_file_serialization_test.py  lineage.py  main.py  metadata_service.py  new_packages.py  package_builder.py  packages.py  presto_sql.py  registry.py  search_logging.py  search_util.py  session.md  session.py  sso_roles.py  (+3 more)
api/python/quilt3-admin/: README.md  base_client.py  exceptions.py  graphql_client_wrapped.py  pyproject.toml  queries.graphql  requirements.txt
api/python/quilt3-graphql/: README.md  base_client.py  exceptions.py  postprocess_fragments.py  pyproject.toml  queries.graphql  requirements.in
api/python/quilt3_local/: __init__.py  _upstream.py  api.py  async_cache.py  aws.py  buckets.py  context.py  graphql.py  lambda_runner.py  lambda_subprocess.py  main.py  packages.py  s3proxy.py  search.py  settings.py  voila_kernel.py  voila_proxy.py  voila_subprocess.py
api/python/scripts/: run_local_catalog.py
api/python/tests/: conftest.py  graphql_fixtures.py  graphql_mock_server.py  graphql_operation_router.py  preview_fixtures.py  requirements.txt  test_admin_api.py  test_api.py  test_api_keys.py  test_bucket.py  test_checksums.py  test_cli.py  test_data_transfer.py  test_event_handlers.py  test_formats.py  test_graphql_base_client.py  (+13 more)
gendocs/: README.md  build.py  cli.md  constants.md  env_constants.md  gen_cli_api_reference.sh  gen_walkthrough.sh  pydocmd.yml  pyproject.toml
lambdas/access_counts/: CHANGELOG.md  index.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.in  test-requirements.txt
lambdas/es_ingest/: CHANGELOG.md  pyproject.toml  pytest.ini
lambdas/iceberg/: CHANGELOG.md  pyproject.toml  pytest.ini
lambdas/indexer/: CHANGELOG.md  Dockerfile  README.md  document_queue.py  index.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt
lambdas/manifest_indexer/: CHANGELOG.md  pyproject.toml  pytest.ini
lambdas/pkgpush/: CHANGELOG.md  Dockerfile  index.py  pyproject.toml  requirements.txt  setup.py  test-requirements.in  test-requirements.txt
lambdas/preview/: CHANGELOG.md  index.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
lambdas/s3hash/: CHANGELOG.md  Dockerfile  index.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.in  test-requirements.txt
lambdas/shared/: CHANGELOG.md  pyproject.toml  requirements.txt  setup.py  test-requirements.in  test-requirements.txt
lambdas/status_reports/: CHANGELOG.md  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
lambdas/tabular_preview/: CHANGELOG.md  Dockerfile  pyproject.toml  requirements.txt  setup.py  test-requirements.in
lambdas/thumbnail/: CHANGELOG.md  Dockerfile  Dockerfile.lambda  ignore.txt  index.py  lambda.Dockerfile  pyproject.toml  quilt_binaries.json  requirements.txt  setup.py  test-requirements.in  test-requirements.txt
lambdas/transcode/: CHANGELOG.md  index.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
py-shared/: CHANGELOG.md  es.py  pyproject.toml  requirements.txt
py-shared/quilt_shared/: aws.py  const.py  lambdas_large_request_handler.py  pkgpush.py  types.py
py-shared/tests/: test_athena.py  test_crc64.py  test_cross_account.py  test_iceberg_queries.py
quilt3_local/: CHANGELOG.md  Makefile  README.md  catalog-commit  pyproject.toml
quilt3_local/manual-test/: README.md  pyproject.toml
quilt3_local/quilt3_local/: api.py  async_cache.py  aws.py  buckets.py  context.py  graphql.py  main.py  packages.py  pkgselect.py  run_async.py  s3proxy.py  schema.graphql
quilt_lite/: README.md  pyproject.toml
quilt_lite/quilt_lite/: api.py  graphql.py  lambdas.py  main.py  s3proxy.py  schema.graphql
quilt_lite/tests/: test_quilt_lite.py
testdocs/: .gitignore  .quiltignore  QuickStart.ipynb  README.md  app-manifest.yaml  clean.sh  data.csv  example.jsonl  pyproject.toml  quilt_summarize.json  requirements.txt  reset-athena.sh  test.txt  vega.json
testdocs/reef-check/: .quiltignore  CA-06-california-counties.json  README.md  quilt_summarize.json  urchins2006-2019.parquet
testdocs/scripts/: build.py
testdocs/tests/: test_testdocs.py
(+4274 files in other folders)
