[project]
name = "quilt3-gendocs"
version = "0.1.0"
description = "Documentation generator for quilt3"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "quilt3",
    "pydoc-markdown",
    "nbconvert~=7.17",
]

[tool.uv.sources]
quilt3 = { path = "../api/python", editable = true }
# TODO: pin to tag v2.0.5+quilt3.3 once quiltdata/pydoc-markdown#1 is merged and tagged
pydoc-markdown = { git = "https://github.com/quiltdata/pydoc-markdown.git", rev = "5d3de6ec7929e9c0a6ab3781e37718f22dafa12d" }
