[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quilt-shared"
description = "Shared code for Quilt backend and lambdas"
version = "0.1.0"
requires-python = ">= 3.9, < 4"
dependencies = [
]

[project.optional-dependencies]
pydantic = [
  "pydantic ~= 2.10",
  "typing-extensions ~= 4.9",
]
boto = [
  "boto3-stubs[athena,s3,sts] ~= 1.34",
  "boto3 ~= 1.34",
  "types-aiobotocore[s3] ~= 2.11",
]
quilt = [
  "quilt3 >= 5.4, < 8",
]
es = [
  "aws-requests-auth ~= 0.4.2",
  "elasticsearch ~= 6.8",
  "orjson ~= 3.10",
]

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=6.2",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
    "quilt-shared[pydantic,boto,quilt,es]",
]

[tool.uv]
default-groups = ["test"]

[tool.black]
line-length = 119
