[tool.poetry]
name = "quilt_lite"
version = "0.1.0"
description = ""
authors = ["Alexei Mochalov <alexei@quiltdata.io>"]

[tool.poetry.dependencies]
python = "^3.7"
ariadne = {git = "https://github.com/mirumee/ariadne.git"}
boto3 = "^1.10.0"
quilt3 = {path = "../api/python/", develop = true}
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
importlib-resources = "^5.3.0"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"
# python-dotenv = "^0.19.1"
# watchdog = "^2.1.6"
asgiproxy = "^0.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
