[tool.poetry]
name = "quilt_lite"
version = "0.1.0"
description = ""
authors = ["Alexei Mochalov <alexei@quiltdata.io>"]

[tool.poetry.dependencies]
# TODO: make it working under 3.7
python = "^3.8"
ariadne = {git = "https://github.com/mirumee/ariadne.git"}
boto3 = "^1.10.0"
quilt3 = {path = "../api/python/", develop = true}
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
importlib-resources = "^5.3.0"
imageio = "2.5.0"
aicsimageio = "3.0.7"
pdf2image = "^1.16.0"
pandas = "^1.3.4"
fcsparser = "^0.2.4"
xlrd = "^2.0.1"
pyarrow = "^6.0.1"
psutil = "^5.8.0"
nbformat = "^5.1.3"
nbconvert = "^6.3.0"

[tool.poetry.dev-dependencies]
# pytest = "^5.2"
# python-dotenv = "^0.19.1"
# watchdog = "^2.1.6"
asgiproxy = "^0.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
