[project]
name = "testdocs"
version = "0.1.0"
description = "Test documentation code blocks for quilt3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quilt3",
    "pytest-codeblocks>=0.17",
    "altair>=5",
    "numpy>=2.1",
    "pandas>=2.1",
    "pytest>=8",
]

[tool.uv.sources]
quilt3 = { path = "../api/python", editable = true }
