[project]
name = "testdocs"
version = "0.1.0"
description = "Test documentation code blocks for quilt3"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "quilt3",
    "pytest-codeblocks~=0.18.0",
    "altair~=4.2",
    "pandas~=2.0",
    "pytest~=9.1",
]

[tool.uv.sources]
quilt3 = { path = "../api/python", editable = true }
