[project]
name = "t4_lambda_access_counts"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "boto3[crt]~=1.40",
    "quilt-shared[boto,pydantic]",
    "t4_lambda_shared",
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
quilt-shared = { path = "../../py-shared" }
t4_lambda_shared = { url = "https://github.com/quiltdata/quilt/archive/d496dffbfb4b7a2ae05f6c1f7f0cb7d5d43bc984.zip", subdirectory = "lambdas/shared" }
