[project]
name = "t4_lambda_access_counts"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "boto3[crt]~=1.40",
    "t4-lambda-shared",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
t4-lambda-shared = { path = "../shared" }
