[project]
name = "es-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest-cov~=6.2",
    "quilt-shared[boto,es]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
quilt-shared = { url = "https://github.com/quiltdata/quilt/archive/e4f3c42006f2f12297284455582175b10c15e6eb.zip", subdirectory = "py-shared" }

[dependency-groups]
test = [
    "pytest~=8.4",
]
