[project]
name = "t4_lambda_es_ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest-cov~=6.2",
    "quilt-shared[boto,es]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
quilt-shared = { url = "https://github.com/quiltdata/quilt/archive/11a0442ca07660b6c9a344e65c12e0526bf2f7f5.zip", subdirectory = "py-shared" }

[dependency-groups]
test = [
    "pytest~=8.4",
]
