[project]
name = "t4_lambda_es_ingest"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = ">=3.11"
dependencies = [
    "quilt-shared[boto,es]",
    "t4-lambda-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
quilt-shared = { url = "https://github.com/quiltdata/quilt/archive/11a0442ca07660b6c9a344e65c12e0526bf2f7f5.zip", subdirectory = "py-shared" }
t4-lambda-shared = { url = "https://github.com/quiltdata/quilt/archive/d496dffbfb4b7a2ae05f6c1f7f0cb7d5d43bc984.zip", subdirectory = "lambdas/shared" }

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=6.2",
    "pytest-env~=1.1",
    "pytest-mock~=3.14",
]

[tool.uv]
default-groups = ["test"]
