[project]
name = "t4_lambda_iceberg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.40.41,<2.0.0",
    "quilt-shared[boto]",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.15.1",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
quilt-shared = { url = "https://github.com/quiltdata/quilt/archive/1db847b09ee33a6eee327a61b2501ba07ff7532b.zip", subdirectory = "py-shared" }
