[project]
name = "t4_lambda_iceberg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = "==3.11.*"
dependencies = [
    "boto3>=1.40.41,<2.0.0",
    "quilt-shared[boto]",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "coverage~=7.10",
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
quilt-shared = { url = "https://github.com/quiltdata/quilt/archive/e490dced1243871997de163302b8b0df9a567816.zip", subdirectory = "py-shared" }
