[project]
name = "t4_lambda_iceberg"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.41,<2.0.0",
    "quilt-shared[boto]",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = []
