[project]
name = "t4_lambda_es_indexer"
version = "0.1.0"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = "~=3.13.0"
dependencies = [
"boto3 ~= 1.34",
    "jsonschema ~= 3.2",
    "nbformat ~= 5.1.3",
    "pdfminer.six == 20240706",
    "python-pptx ~= 0.6.21",
    "strict-rfc3339 ~= 0.7",  # for jsonschema format
    "tenacity ~= 9.0",
    "quilt-shared[boto,es]",
    "t4_lambda_shared[mem,preview]",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
t4-lambda-shared = { url = "https://github.com/quiltdata/quilt/archive/d496dffbfb4b7a2ae05f6c1f7f0cb7d5d43bc984.zip", subdirectory = "lambdas/shared" }
quilt-shared = { url = "https://github.com/quiltdata/quilt/archive/df53c9ce125ea051e0d1ac41d58796336e202256.zip", subdirectory = "py-shared" }

[dependency-groups]
test = [
    "pytest ~= 8.4",
    "pytest-cov ~= 7.0",
    "pytest-env ~= 1.1",
    "pytest-mock ~= 3.15",
    "responses ~= 0.25",
]

[tool.uv]
default-groups = ["test"]
