[project]
name = "t4_lambda_es_indexer"
version = "0.1.0"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = "==3.13.*"
dependencies = [
    "boto3~=1.34",
    "jsonschema~=3.2",
    "nbformat~=5.1.3",
    "pdfminer.six == 20240706",
    "python-pptx~=0.6.21",
    "strict-rfc3339~=0.7",  # for jsonschema format
    "tenacity~=9.0",
    "quilt-shared[boto,es]",
    "t4_lambda_shared[mem,preview]",
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.uv.sources]
t4-lambda-shared = { url = "https://github.com/Austin-s-h/quilt/archive/4d39a6091ab16eee77c020cf5ffa0f8740da35de.zip", subdirectory = "lambdas/shared" }
quilt-shared = { url = "https://github.com/Austin-s-h/quilt/archive/4d39a6091ab16eee77c020cf5ffa0f8740da35de.zip", subdirectory = "py-shared" }

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
    "responses~=0.25",
]
prod = [
    "awslambdaric~=3.1",
]

[tool.uv]
default-groups = ["test"]
