[project]
name = "t4_lambda_es_indexer"
version = "0.2.0"
authors = [
    { name = "Sergey Fedoseev", email = "fedoseev.sergey@quiltdata.io" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "jsonschema>=4,<5",
    "nbformat>=5.10",
    "pdfminer.six>=20240706",
    "python-pptx>=1.0,<2",
    "strict-rfc3339>=0.7",
    "tenacity>=9",
    "quilt-shared[boto,es]",
    "t4-lambda-shared[mem,preview]",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
t4-lambda-shared = { workspace = true }

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
    "responses~=0.25",
]
prod = [
    "awslambdaric~=3.1",
]

[tool.uv]
default-groups = []
