[project]
name = "t4_lambda_preview"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "nbconvert>=7.17",
    "nbformat>=5.10",
    "pandas>=2.2",
    "requests>=2.32,<3",
    "t4-lambda-shared[mem,preview]",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
    "responses ~= 0.25.3",
]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
# editable for local dev; dev-only (prod .zip uses --no-emit-local + separate pip install)
t4-lambda-shared = { path = "../shared", editable = true }
