[project]
name = "t4_lambda_s3hash"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore ~= 2.15",
    "types-aiobotocore[s3] ~= 2.15",
    "botocore >= 1.35.50",
    "pydantic ~= 2.10",
    "quilt3 >= 7, < 8",
    "quilt-shared[boto,pydantic,quilt]",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-asyncio ~= 1.3",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = []

[tool.uv.sources]
quilt3 = { path = "../../api/python", editable = true }
