[project]
name = "t4_lambda_shared"
version = "0.0.3"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=2.6.0",
]

[project.optional-dependencies]
mem = [
    "psutil~=6.1",
]
preview = [
    "fcsparser~=0.2.1",
    "openpyxl~=3.1",
    "pandas~=2.2",
    "pyarrow~=18.0",
    "t4_lambda_shared[mem]",
    "xlrd~=2.0",
]
lambda = [
    "awslambdaric>=2,<3",
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
    "t4_lambda_shared[mem,preview]",
    "py-w3c ~= 0.3.1",
    "testfixtures ~= 6.14.1",
]

[tool.uv]
default-groups = ["test"]
