[project]
name = "t4_lambda_shared"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4,<5",
]

[project.optional-dependencies]
mem = [
    "psutil>=6",
]
preview = [
    "fcsparser~=0.2.1",
    "numpy>=1.26,<3",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "psutil>=6",
    "pyarrow>=18",
    "xlrd>=2,<3",
]
lambda = [
    "awslambdaric>=3,<4",
]

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
    "t4-lambda-shared[mem,preview]",
    "py-w3c ~= 0.3.1",
    "testfixtures ~= 6.14.1",
]

[tool.uv]
default-groups = ["test"]
