[project]
name = "t4_lambda_status_reports"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "Jinja2~=3.1",
    "aiobotocore~=2.3",
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[dependency-groups]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "pytest-env~=1.1",
    "pytest-mock~=3.15",
]

[tool.uv]
default-groups = ["test"]
